# pydantic-flatbuffers

./: .gitignore  README.md  pyproject.toml  tox.ini
pydantic_flatbuffers/: __init__.py
pydantic_flatbuffers/fbs/: _compat.py  fbs.py
pydantic_flatbuffers/fbs/parser/: __init__.py  parser.py  parsetab.py
pydantic_flatbuffers/lang/: __init__.py  common.py  datastructure.py  enums.py  generator.py  get_type.py
pydantic_flatbuffers/lang/cpp/: generate.py  types.py
pydantic_flatbuffers/lang/java/: __init__.py  generate.py  types.py
pydantic_flatbuffers/lang/kt/: generate.py  types.py
pydantic_flatbuffers/lang/py/: __init__.py  generate.py  template.py.j2  types.py
pydantic_flatbuffers/lang/rust/: generate.py  types.py
pydantic_flatbuffers/lang/swift/: generate.py  types.py
pydantic_flatbuffers/lang/yaml/: generate.py
tests/: test_fbs_parser.py  test_flatc.py  thrift2fbs.py
tests/color/: color.py
tests/constants/: constants.py
tests/include/: include.py
tests/parser_cases/: __init__.py
