[tool.poetry]
name = "pydantic-flatbuffers"
version = "0.1.1"
description = ""
authors = ["JStrukt <jochen@struktu.red>"]
readme = "README.md"
packages = [{include = "pydantic_flatbuffers"}]

[tool.poetry.dependencies]
python = "^3.9"
ply = "^3.11"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
tox = "^4.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
